Inspection fixes, recommended changes for upgraded Java versions