@@ -3,8 +3,6 @@ package me.retrodaredevil.solarthing.chatbot;
 import me.retrodaredevil.solarthing.annotations.NotNull;
 import me.retrodaredevil.solarthing.message.MessageSender;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -12,7 +10,7 @@ public class ChatBotHandlerMultiplexer implements ChatBotHandler {
 	private final List<ChatBotHandler> chatBotHandlerList;
 
 	public ChatBotHandlerMultiplexer(List<? extends ChatBotHandler> chatBotHandlerList) {
-		this.chatBotHandlerList = Collections.unmodifiableList(new ArrayList<>(chatBotHandlerList));
+		this.chatBotHandlerList = List.copyOf(chatBotHandlerList);
 	}
 
 	@Override
