@@ -2,16 +2,14 @@ package me.retrodaredevil.solarthing.rest.graphql.packets;
 
 import me.retrodaredevil.solarthing.rest.graphql.packets.nodes.PacketNode;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class PacketFilterMultiplexer implements PacketFilter {
 	private final List<PacketFilter> packetFilterList;
 
 	public PacketFilterMultiplexer(Collection<? extends PacketFilter> packetFilterList) {
-		this.packetFilterList = Collections.unmodifiableList(new ArrayList<>(packetFilterList));
+		this.packetFilterList = List.copyOf(packetFilterList);
 	}
 
 	@Override
